--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -35,3 +35,23 @@ span.medium {
 .sort-icon {
     cursor: move;
 }
+
+.role-icon-medium, .role-icon-medium img {
+    /*width: 2em;*/
+    height: 1.5em;
+}
+
+.role-icon-small, .role-icon-small img {
+    /*width: 1.25em;*/
+    height: 1.25em;
+}
+
+.role-icon-tiny, .role-icon-tiny img {
+    /*width: 1em;*/
+    height: 1em;
+}
+
+.role-icon-extra-tiny, .role-icon-extra-tiny img {
+    /*width: 1em;*/
+    height: .75em;
+}
